# yolov3_rs_video

./: CMakeLists.txt
data/: aspara.cfg
include/: YOLOManager.h  utils.hpp
src/: YOLOManager.cpp  main.cpp
